--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^1.3.10",
+    "ai": "^4.3.5",
     "axios": "^1.8.4",
     "next": "15.3.0",
     "react": "^19.0.0",
